# turbotonic

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml
backend/: README.md
backend/src/: activity_repository.py  brand_repository.py  certificate_dto.py  certificate_repository.py  db.py  document_dto.py  document_repository.py  dto.py  invoice_document_dto.py  invoice_repository.py  main.py  milestone_repository.py  packaging_dto.py  packaging_repository.py  po_document_dto.py  product_dto.py  product_repository.py  qualification_type_dto.py  qualification_type_repository.py  repository.py  schema.py  seed.py  shipment_document_requirement_dto.py  shipment_dto.py  shipment_repository.py  user_repository.py  vendor_dto.py  vendor_party_repository.py  vendor_repository.py
backend/tests/: conftest.py  test_activity.py  test_admin_target_role.py  test_api_brand.py  test_api_certificate.py  test_api_certificate_approve.py  test_api_dashboard.py  test_api_document.py  test_api_invoice_documents.py  test_api_milestone.py  test_api_packaging.py  test_api_product.py  test_api_purchase_order.py  test_api_qualification_type.py  test_api_shipment.py  test_api_vendor.py  test_api_vendor_parties.py  test_auth_dev.py  test_auth_endpoints.py  test_auth_session.py  test_brand_activity_events.py  test_brand_domain.py  test_brand_pdfs.py  test_brand_repository.py  test_brand_scoped_dashboard.py  test_brand_scoped_invoice_shipment.py  test_brand_scoped_po_access.py  test_certificate.py  test_critical_path.py  test_customs_paper_tail_pdfs.py  test_dashboard_summary.py  test_document.py  test_email_service.py  test_invite_token.py  test_invoice.py  test_invoice_pdf.py  test_milestone.py  (+29 more)
docker/: init-test-db.sh
docs/: backlog.md  ddd-vocab.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json
work-log/: iterations-summary.md
(+390 files in other folders)
