[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vendor-portal"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "asyncpg",
    "itsdangerous",
    "sse-starlette",
    "reportlab",
    "webauthn>=2",
    "python-multipart>=0.0.26",
    "aiosmtplib>=3",
    "jinja2>=3",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pypdf",
]

[tool.pytest.ini_options]
# Scratch tests live outside version control (see .gitignore) and are tied to a
# specific iteration's assumptions. Exclude them from the permanent suite so
# `make test` only exercises committed, long-lived tests.
norecursedirs = ["backend/tests/scratch", "frontend/tests/scratch", ".venv", "node_modules"]
